# HERG

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HERG_CODEx_GUIDE.md  LICENSE  META_LOG.md  Makefile  README.md  cli_legacy.py  fly.toml  herg-run  pyproject.toml  requirements.txt  run_chat.py  setup.cfg  sitecustomize.py  torch.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: auto-merge.yml  (+4 more)
DOCS/: TODO_ROADMAP.md  capsule_graph.md
bench/: baseline.json  hybrid_seed.py
docs/: autotune.md  ci.md  cli.md  hvlogfs.md
herg/: __init__.py  _ci_stubs.py  backend.py  cli.py  config.py  config_lock.py  cupy_encoder.py  distance.py  encoder.py  encoder_ext.py  faiss_wrapper.py  memory.py  nbext.py  prof.py  scheduler.py  sinc_kernel.py  snapshot.py  todo_queue.py  viz.py
herg-agent/: Dockerfile  README.md  docker-compose.yml  fly.toml  herg  requirements.txt
integrations/: llm_hook.py
notebooks/: quickstart.ipynb
papers/: AMT-overview.txt  current paper.txt
scripts/: bench_ingest.py  plot_autotune.py  smoke_run.sh
src/: encoder.py
tests/: __init__.py  test_adf.py  test_autotune.py  test_bandit.py  test_blocks.py  test_cli.py  test_distance.py  test_encoder.py  test_expand.py  test_hook.py  test_hvlogfs_chunk.py  test_hvlogfs_hnsw.py  test_hvlogfs_meta.py  test_hvlogfs_parity.py  test_learning.py  test_memory_decay.py  test_nbext.py  test_node.py  test_node_auth.py  test_noise.py  test_noise_robust.py  test_promote.py  test_retention.py  test_runner.py  test_sinc_and_adf.py  test_snapshot.py  test_viz.py
tools/: run_precommit.py
(+38 files in other folders)
