[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "herg"
version = "0.1.0a0"
description = "HERG — Hypervector Encoder & Graph capsules"
authors = [{name="HERG Team"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.26",
    "faiss-cpu>=1.7.4",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "orjson>=3.9",
]

[project.scripts]
herg-run = "herg.cli:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "docs*", "scripts*"]
